frontend/manifests/ui_development.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-ai
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-ai
  template:
    metadata:
      labels:
        app: frontend-ai
    spec:
      containers:
        - name: ai-frontend
          image: devacraifuture.azurecr.io/frontend:1a0a1dda8ff92d76f351b97bbeaf823945cae199
          imagePullPolicy: Always
          ports:
            - containerPort: 80
