frontend/manifests/ui_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc-ai
spec:
  selector:
    app: frontend-ai
  ports:
    - port: 9000
      targetPort: 80
  type: ClusterIP
