frontend/manifests/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: "azure/application-gateway"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: "azure/application-gateway"
  rules:
    - host: neuralixui.apforge.info  # replace with your frontend FQDN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc-ai   # replace with your actual frontend Service name
                port:
                  number: 9000
